2009-10-01  Per Bothner  <per@bothner.com>

	* Invoke.java (selectApplicable): If arguments are IntNum literals
	in int or long range, set argument type to int or long.

2009-09-30  Per Bothner  <per@bothner.com>

	* ClassMemberLocation.java (define): Only grab name from value
	if the field is final.

	* FieldLocation.java (toString): Check for null type.

2009-09-15  Per Bothner  <per@bothner.com>

	* SlotGet.java (getSlotValue):  Don't use old language.coerceToObject;
	instead just do Integer.valueOf.

2009-08-27  Per Bothner  <per@bothner.com>

	* ArrayGet.java (isSideEffectFree): New method.
	* ArrayLength.java (isSideEffectFree): New method.
	* gnu/kawa/reflect/ArrayNew.java (isSideEffectFree): New method.

2009-08-23  Per Bothner  <per@bothner.com>

	* CompileArrays.java: New class, for Inlineable support
	for following Procedures, so we can factor it out from run-time code.
	* Makefile.am: Update accordingly.
	* ArrayGet.java: Now longer implment Inlineable.
	* ArrayLength.java: Likewise.
	* ArrayNew.java: Likewise.
	* ArraySet.java: Likewise.

2009-08-05  Per Bothner  <per@bothner.com>

	* ClassMethods.java (getMethods): Update to new ClassType API.
	(select): Use the receiver as the declaring class, for better
	java spec compatibility.

	* ClassMethods.java (getMethods): Override declared type of method
	so it matches receiver, for improved binary compatibility.

2009-06-28  Per Bothner  <per@bothner.com>

	* TypeSwitch.java (inline): Update for new inlining framework.

2009-03-13  Per Bothner  <per@bothner.com>

	* ClassMethods.java (MethodFilter.select): Skip SYNTHETIC methods.

2008-12-29  Per Bothner  <per@bothner.com>

	* SlotGet.java (lookupMember, inline): Use new isAccessible convenience
	method, which fixes error when accessing static protected members.
	* SlotSet.java (lookupMember, inline): Likewise.
	* ClassMethods.java (select): Likewise.

2008-12-24  Per Bothner  <per@bothner.com>
